--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h1 class="header-title"><span>We are launching</span> soon!</h1>
 		<p class="header-text">Subscribe and get notified</p>
 		<form class="email-collector">
-            <input class="email-input" type="email" label="email" placeholder="Your email address...">
+            <input class="email-input" type="email" aria-label="email" placeholder="Your email address...">
 			<button class="btn" type="submit">Notify Me</button>
         </form>
 <!--		<p id="invalid-email">Please provide a valid email address</p>-->
